fix unrecognized private key split pieces overflow

--- a/css/style.css
+++ b/css/style.css
@@ -992,6 +992,7 @@ input[type='checkbox'][disabled] +label {
 	font-size: 24px;
 	-ms-flex-pack: center;
 	justify-content: center;
+	word-break: break-all;
 }
 
 .import_warning_div_icon {
